--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
     "autoprefixer": "^10.4.24",
-    "nuxt": "3.11.2",
+    "nuxt": "^4.3.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17"
   },
